// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Component CommonCollection should return 8 articles 1`] = `
<div>
  <div
    class="ln-roof --generic"
    roof-container="roof-container"
  >
    <div
      class="--ln-roof-full pt-24 flex jc-between"
    >
      <div
        class="--ln-roof-left"
      >
        <div
          class="flex uppercase ai-center"
          roof-group="left"
          target="_blank"
        >
          <h3
            class="text ln-text --roof-title --prumo --font-l"
          >
            CommonCOllection
          </h3>
        </div>
      </div>
      <div
        class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
        roof-group="right"
      />
    </div>
  </div>
  <section
    class="ln-bngrid pb-16 --bn-4-8"
  >
    <div
      class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
    >
      <div
        class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            target="_self"
            title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
          >
            <section
              class="media-container"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
              title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <img
                  alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Carlos Pagni"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Carlos Pagni
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            target="_self"
            title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
          >
            <section
              class="media-container"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
              title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <img
                  alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            >
              <span
                class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
              >
                <div
                  class="pulse-animation"
                >
                  <div
                    class="pulse w-5 h-5 bg-light-0 rounded-circle"
                    style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                  />
                </div>
                vivo
              </span>
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Celina Chatruc"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Celina Chatruc
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            target="_self"
            title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
          >
            <section
              class="media-container"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
              title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/Fu3kfsnTFGAe8Kt-P34acHaqgc4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/Q8uUmueIrYd77Kp1rTfU3z88PbY=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <img
                  alt="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Francisco Jueguen"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Francisco Jueguen
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            target="_self"
            title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
          >
            <section
              class="media-container"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
              title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/ZNcwkfsAPZKeSNfJT3QH_Q4sJkU=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/dcXGl99iWjvLpMORfl-mqFZyaJ0=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <img
                  alt="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Redacción - BBC News Mundo"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Redacción - BBC News Mundo
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            target="_self"
            title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
          >
            <section
              class="media-container"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
              title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/rEUp65jkcaI8St-_G0QrexhCBsI=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/-0CRKhU6ZKyPbBGA2T1SnRlU0Qg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <img
                  alt="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por José Luis Domínguez"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        José Luis Domínguez
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --5 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/test-noticia-en-arc-nid16032021-2/"
            target="_self"
            title="Test noticia en ARC"
          >
            <section
              class="media-container"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/13v05lI2fYMPBVpL1jPC8RvQcTg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/nNQd85R22QnfEjty9_GwPJSb9yc=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <img
                  alt="Test noticia en ARC"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Test noticia en ARC
              </h2>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Tomás Girón"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Tomás Girón
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --6 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/revista-living/test-noticia-en-arc-nid03012023/"
            target="_self"
            title="Test noticia en ARC"
          >
            <section
              class="media-container"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/_bT-GKL06Ie_uDCQKuG1nQ2hcqE=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/-g5rNPf2Az-z6OvSdvenYWWoSQ4=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <img
                  alt="Test noticia en ARC"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Test noticia en ARC
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --7 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --m-l --regular --no-media"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
            target="_self"
            title="Santa Cruz. Este es un titulo corto."
          >
            <section
              class="description-container relative flex flex-column"
              href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                <span
                  class="text ln-text lead --prumo --font-extra"
                >
                  Santa Cruz.
                   
                </span>
                Este es un titulo corto.
              </h2>
              <h3
                class="text ln-text subhead --font-s"
              >
                Incidentes frente al hotel donde convocó a militantes 
              </h3>
              <div
                class="flex flex-column gap-4"
              >
                <div
                  class="marquee-container flex ai-center"
                  title="Por Mariela Arias"
                >
                  <div
                    class="marquee-text flex --font-2xs w-100 flex-column"
                  >
                    <span
                      class="text ln-text marquee"
                    >
                      Por 
                      <strong>
                        Mariela Arias
                      </strong>
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </a>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Tests Component CommonCollection should return hashTag with 7 articles 1`] = `
<div>
  <div
    class="ln-roof --hashtag"
    roof-container="roof-container"
  >
    <div
      class="--ln-roof-full pt-24 flex jc-between"
    >
      <div
        class="--ln-roof-left"
      >
        <div
          class="flex uppercase ai-center"
        >
          <h3
            class="roof-img"
          >
            <span>
              Hashtag
            </span>
            <i
              class="icon"
              style="width: 161px; height: 83px;"
            >
              <svg
                fill="none"
                height="83"
                viewBox="0 0 161 83"
                width="161"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_7555_88186)"
                >
                  <path
                    d="M159.26 5.30858L0 14.0664L1.49845 41.3156L160.759 32.5578L159.26 5.30858Z"
                    fill="#DBFF00"
                  />
                  <path
                    d="M139.118 40.633L0 48.2832L1.49845 75.5324L140.616 67.8823L139.118 40.633Z"
                    fill="#DBFF00"
                  />
                  <path
                    d="M33.5068 9.73789L30.7102 9.96774L23.7744 22.1689L19.2357 22.5419L26.1715 10.3408L23.3749 10.5706L16.4391 22.7718L4.19835 23.7779L4.03884 26.3295L14.9042 25.4365L12.5655 29.5519L3.80898 30.2716L3.69531 32.8195L11.0764 32.2128L4.0985 44.4636L6.89507 44.2337L13.873 31.9829L18.4117 31.6099L11.4338 43.8607L14.2303 43.6308L21.2083 31.3801L33.0364 30.4079L33.1501 27.86L22.6973 28.7191L25.036 24.6037L33.3799 23.9179L33.5394 21.3663L26.5709 21.939L33.5068 9.73789ZM19.9007 28.949L15.362 29.322L17.7008 25.2066L22.2395 24.8336L19.9007 28.949ZM47.5881 7.65742L36.8145 8.54292L36.7008 11.0908L38.7638 10.9212L36.9602 41.7626L45.6708 41.0467L46.5004 26.9935C46.7686 22.956 49.1607 22.2978 49.9401 22.2337C51.0862 22.1395 51.9566 22.6219 52.081 24.1348C52.2129 25.7393 51.262 35.5101 51.4165 37.3897C51.571 39.2694 52.5394 40.9437 55.7945 40.6762C57.9034 40.5028 60.4142 39.6041 61.9817 38.4599L62.1142 36.1412C61.7663 36.4006 61.3154 36.53 60.9945 36.5563C60.536 36.594 60.1962 36.3912 60.1473 35.7952C60.0644 34.7866 60.9398 24.099 60.7816 22.1734C60.4575 18.2307 57.9611 16.4974 54.4769 16.7838C51.3594 17.04 48.5383 18.6565 46.7384 22.5892L47.5881 7.65742ZM89.305 33.9064C88.9571 34.1657 88.552 34.2913 88.2311 34.3177C87.7268 34.3592 87.4787 34.1488 87.4298 33.5528C87.3469 32.5442 88.3548 16.1686 88.4528 13.9912L87.0774 14.1043L79.6065 16.4261C78.0032 15.4501 75.8453 15.0275 73.9198 15.1857C67.1805 15.7397 63.3911 22.4205 64.0919 30.9478C64.5742 36.816 67.2144 39.7375 72.2116 39.3268C74.0454 39.1761 77.4694 38.1562 78.6921 34.5017C78.684 34.964 78.7141 35.3307 78.7329 35.5599C78.8799 37.3479 79.7302 38.7088 82.9853 38.4413C85.0941 38.268 87.605 37.3693 89.1725 36.225L89.305 33.9064ZM78.8504 29.6886C78.5546 34.513 76.4218 35.5191 75.4591 35.5983C74.1296 35.7075 73.3747 34.3849 73.1373 31.4967C72.3384 21.7774 74.7337 18.3497 77.3011 18.1387C78.1263 18.0709 78.9245 18.236 79.4935 18.42L78.8504 29.6886ZM99.315 37.0991C94.1345 37.5249 91.0383 35.7947 90.8009 32.9065C90.6351 30.8893 91.9012 29.4467 93.7809 29.2922C95.8898 29.1189 97.3022 30.0182 97.4228 31.4853C97.5358 32.8606 96.656 33.9484 94.5508 34.1675C95.5431 35.0091 97.0824 35.2057 98.6411 35.0775C101.438 34.8477 102.548 33.1872 102.446 31.9494C102.137 28.19 92.7239 28.2252 92.1889 21.7152C91.8271 17.314 94.9258 13.4592 102.169 12.8639C106.983 12.4682 110.171 14.1909 110.408 17.0791C110.567 19.0046 109.331 20.2601 107.406 20.4183C105.343 20.5879 103.888 19.7382 103.764 18.2253C103.655 16.8957 104.397 15.8193 106.365 15.6115C105.387 14.9533 104.035 14.7875 102.706 14.8968C100.918 15.0437 100.378 16.3343 100.449 17.2054C100.815 21.6524 110.651 22.2747 111.129 28.0971C111.566 33.4152 106.375 36.5188 99.315 37.0991ZM124.31 1.35156L113.536 2.23707L113.422 4.78494L115.485 4.61538L113.682 35.4568L122.392 34.7408L123.222 20.6876C123.49 16.6501 125.882 15.9919 126.662 15.9279C127.808 15.8337 128.678 16.316 128.802 17.8289C128.934 19.4335 127.984 29.2042 128.138 31.0839C128.293 32.9635 129.261 34.6378 132.516 34.3703C134.625 34.197 137.136 33.2983 138.703 32.154L138.836 29.8354C138.488 30.0947 138.037 30.2241 137.716 30.2505C137.257 30.2882 136.918 30.0853 136.869 29.4893C136.786 28.4807 137.661 17.7931 137.503 15.8676C137.179 11.9249 134.683 10.1916 131.198 10.4779C128.081 10.7342 125.26 12.3507 123.46 16.2833L124.31 1.35156ZM53.9095 48.9283L54.069 46.3767L49.7137 46.7346L50.0491 40.7069L47.2066 40.9405L41.0031 47.4506L38.94 47.6201L38.7805 50.1718L40.8435 50.0022C39.9675 64.6131 39.931 66.4161 39.9612 66.7829C40.2099 69.8087 42.3288 70.8807 46.134 70.568C48.2887 70.3909 50.9634 69.8018 52.779 68.8679L52.8619 66.5072C52.3306 66.7816 51.4326 67.0862 50.6532 67.1503C49.4154 67.252 48.7892 66.9342 48.6988 65.8339C48.6724 65.513 48.7786 62.8735 49.5542 49.2863L53.9095 48.9283ZM79.8387 63.7822C79.4907 64.0416 79.0857 64.1672 78.7647 64.1936C78.2604 64.235 78.0124 64.0246 77.9634 63.4286C77.8805 62.42 78.8885 46.0444 78.9864 43.8671L77.6111 43.9801L70.1402 46.3019C68.5368 45.326 66.379 44.9033 64.4534 45.0616C57.7142 45.6155 53.9247 52.2964 54.6256 60.8236C55.1079 66.6918 57.7481 69.6134 62.7452 69.2026C64.579 69.0519 68.003 68.032 69.2258 64.3776C69.2176 64.8398 69.2477 65.2066 69.2666 65.4358C69.4135 67.2238 70.2639 68.5847 73.5189 68.3171C75.6278 68.1438 78.1386 67.2451 79.7061 66.1009L79.8387 63.7822ZM69.384 59.5644C69.0882 64.3889 66.9555 65.395 65.9927 65.4741C64.6632 65.5834 63.9083 64.2608 63.6709 61.3725C62.8721 51.6533 65.2674 48.2255 67.8347 48.0145C68.6599 47.9467 69.4581 48.1119 70.0271 48.2959L69.384 59.5644ZM96.4645 66.0158C96.0983 72.2307 93.1592 73.5338 90.9586 73.7147C89.2623 73.8541 87.5058 73.26 86.9946 72.6559C89.7911 72.426 90.9316 70.5784 90.7696 68.607C90.6415 67.0483 89.5274 65.8475 87.2809 66.0321C84.301 66.2771 82.9539 68.4186 83.1498 70.8026C83.3872 73.6908 86.6159 76.4717 93.1259 75.9366C99.2692 75.4317 104.771 71.6102 105.398 61.2661L106.551 41.6016L105.175 41.7146L97.7042 44.0364C96.1008 43.0605 93.943 42.6378 92.0175 42.7961C85.2782 43.35 81.4548 49.6182 82.0012 56.2658C82.4835 62.134 85.8032 65.4613 90.5253 65.0732C92.3591 64.9224 95.5004 63.8334 96.8193 59.6634L96.4645 66.0158ZM97.1239 53.8228C96.8048 58.9261 95.1915 60.0741 93.9995 60.1721C92.0281 60.3341 91.1897 58.5568 90.9523 55.6686C90.3231 48.0124 92.8314 45.96 95.3987 45.749C96.2239 45.6812 97.0221 45.8463 97.5911 46.0304L97.1239 53.8228Z"
                    fill="#1C1C1F"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_7555_88186"
                  >
                    <rect
                      fill="white"
                      height="83"
                      width="161"
                    />
                  </clippath>
                </defs>
              </svg>
            </i>
          </h3>
        </div>
      </div>
      <div
        class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
      />
    </div>
  </div>
  <div
    class="ln-caja-hashtag --hash-1-2-2-2_grid"
  >
    <div
      class="grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
    >
      <div
        class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            target="_self"
            title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
          >
            <section
              class="media-container"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
              title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
                <img
                  alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m"
              >
                Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            target="_self"
            title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
          >
            <section
              class="media-container"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
              title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
                <img
                  alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            >
              <span
                class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
              >
                <div
                  class="pulse-animation"
                >
                  <div
                    class="pulse w-5 h-5 bg-light-0 rounded-circle"
                    style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                  />
                </div>
                vivo
              </span>
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            target="_self"
            title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
          >
            <section
              class="media-container"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
              title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/Fu3kfsnTFGAe8Kt-P34acHaqgc4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/Q8uUmueIrYd77Kp1rTfU3z88PbY=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
                <img
                  alt="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            target="_self"
            title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
          >
            <section
              class="media-container"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
              title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/ZNcwkfsAPZKeSNfJT3QH_Q4sJkU=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/dcXGl99iWjvLpMORfl-mqFZyaJ0=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
                <img
                  alt="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            target="_self"
            title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
          >
            <section
              class="media-container"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
              title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/rEUp65jkcaI8St-_G0QrexhCBsI=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/-0CRKhU6ZKyPbBGA2T1SnRlU0Qg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
                <img
                  alt="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --5 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/deportes/test-noticia-en-arc-nid16032021-2/"
            target="_self"
            title="Test noticia en ARC"
          >
            <section
              class="media-container"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/13v05lI2fYMPBVpL1jPC8RvQcTg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/nNQd85R22QnfEjty9_GwPJSb9yc=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
                <img
                  alt="Test noticia en ARC"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Test noticia en ARC
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --6 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card flex flex-column ai-start --txt-center --m-l --regular"
        >
          <a
            class="link ln-link flex flex-column --unstyled"
            href="/revista-living/test-noticia-en-arc-nid03012023/"
            target="_self"
            title="Test noticia en ARC"
          >
            <section
              class="media-container"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
              >
                <source
                  media="(min-width: 1024px)"
                  srcset="https://resizer.glanacion.com/resizer/_bT-GKL06Ie_uDCQKuG1nQ2hcqE=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <source
                  media="(min-width: 768px)"
                  srcset="https://resizer.glanacion.com/resizer/-g5rNPf2Az-z6OvSdvenYWWoSQ4=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <source
                  media="(min-width: 375px)"
                  srcset="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
                <img
                  alt="Test noticia en ARC"
                  class="image w-100 h-100 flex --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                />
              </picture>
            </section>
            <section
              class="description-container relative flex flex-column"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-m-l"
              >
                Test noticia en ARC
              </h2>
            </section>
          </a>
        </article>
      </div>
    </div>
  </div>
</div>
`;
